--- a/src/default.css
+++ b/src/default.css
@@ -102,7 +102,6 @@ section {
 body {
   width: 100vw;
   min-width: 1600px;
-  height: 100vh;
   line-height: 1;
 }
 ol,
@@ -138,10 +137,6 @@ body {
   margin: 0;
 }
 
-body > #root > div {
-  height: 100vh;
-}
-
 a {
   text-decoration: none;
   outline: none;
@@ -170,4 +165,12 @@ a:active {
 
 * {
   font-family: "Lato" !important;
+}
+
+body {
+  min-height: 100vh;
+}
+
+body > #root > div {
+  min-height: 100vh;
 }
