update: button text css

--- a/src/default.css
+++ b/src/default.css
@@ -177,5 +177,5 @@ body > #root > div {
 
 @font-face {
   src: url("./styles/fonts/ChakraPetch-Medium.ttf") format("truetype");
-  font-family: "Chakra";
+  font-family: "Chakra-Medium";
 }
