--- a/src/default.css
+++ b/src/default.css
@@ -82,7 +82,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
   vertical-align: baseline;
 }
@@ -101,7 +100,6 @@ section {
 }
 body {
   width: 100vw;
-  min-width: 1400px;
   line-height: 1;
 }
 ol,
@@ -178,4 +176,8 @@ body > #root > div {
 @font-face {
   src: url("./styles/fonts/ChakraPetch-Medium.ttf") format("truetype");
   font-family: "Chakra-Medium";
+}
+
+html {
+  font-size: 62.5%;
 }
